# screamingboom

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  PLAN.md  README.md  docker-compose.dev.yml  docker-compose.yml  monitor.py  monitor_daemon.py  package-lock.json  package.json  playwright.config.ts  test_all_features.py  test_api_edge_cases.py  test_browser_comprehensive.py  test_crawl_engine.py  test_crawl_lifecycle.py  test_crawl_targets.py  test_data_integrity.py  test_deep_loop.py  test_full_loop.py  test_issue_endpoints.py  test_performance.py  test_project_crud.py  test_seo_rules.py  test_url_endpoints.py  test_websocket.py
backend/: AGENTS.md  Dockerfile  alembic.ini  pyproject.toml
backend/app/: main.py
backend/app/analysis/: AGENTS.md  __init__.py  analyzer.py  cookies.py  issue_registry.py  link_score.py  pixel_width.py  post_crawl.py  simhash.py
backend/app/api/: AGENTS.md  deps.py
backend/app/core/: config.py  exceptions.py  logging.py
backend/app/crawler/: AGENTS.md  __init__.py  engine.py  fetcher.py  frontier.py  inserter.py  js_fetcher.py  parser.py  robots.py  utils.py
backend/app/db/: init.sql  session.py
backend/app/models/: __init__.py  alert.py  base.py  config_profile.py  crawl.py  extraction_rule.py  issue.py  link.py  project.py  redirect.py  schedule.py  url.py
backend/app/repositories/: __init__.py  base.py  crawl_repo.py  custom_rules_repo.py  issue_repo.py  project_repo.py  schedule_repo.py  url_repo.py
backend/app/schemas/: __init__.py  common.py  comparison.py  config_profile.py  crawl.py  (+7 more)
backend/tests/: conftest.py
(+111 files in other folders)
