[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "seo-spider-backend"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "gunicorn>=22.0.0",
    "pydantic>=2.8.0",
    "pydantic-settings>=2.4.0",
    "sqlalchemy[asyncio]>=2.0.36",
    "alembic>=1.13.0",
    "asyncpg>=0.30.0",
    "psycopg2-binary>=2.9.10",
    "aiohttp>=3.10.0",
    "selectolax>=0.3.21",
    "lxml>=5.3.0",
    "arq>=0.26.0",
    "redis>=5.1.0",
    "structlog>=24.4.0",
    "httptools>=0.6.1",
    "uvloop>=0.20.0",
    "pybloom-live>=3.0.0",
    "openpyxl>=3.1.0",
    "croniter>=2.0.0",
]

[project.optional-dependencies]
js = [
    "playwright>=1.40.0"
]

dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0",
    "ruff>=0.7.0",
    "mypy>=1.11.0",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.12"
strict = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
